fix word break on lightbox, remove dash on search integrations

--- a/src/static/scss/components/_lightbox.scss
+++ b/src/static/scss/components/_lightbox.scss
@@ -49,6 +49,7 @@
       text-align: center;
       padding: 0.5em;
       letter-spacing: $default-letter-spacing;
+      word-break: initial;
     }
   }
 }
